<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_query"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/query_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/query_header"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/query_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/query_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/query_row_input_hint"
        android:inputType="numberSigned"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditText
        android:id="@+id/query_col"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/query_col_input_hint"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/query_show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/query_button_text" />
</LinearLayout>